# Sulfur

./: CMakeLists.txt  README.md  TIMELINE.md  build.sh  example.slf  out  out.asm  output.asm  sulfur
bld/: CMakeCache.txt  Makefile  Sulfur  cmake_install.cmake  compile_commands.json
include/: assembler.h  assembler.hpp  core.h  error.h  error.hpp  lexer.h  lexer.hpp  parser.h  parser.hpp  vector.h
src/: assembler.c  assembler.cpp  error.c  lexer.c  lexer.cpp  main.c  main.cpp  parser.c  parser.cpp  vector.c
